ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_indirect_call_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (10) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (11) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (12) at (2, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (13) at (3, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (52) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (53) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (54) at (2, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (55) at (3, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (56) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (57) at (1, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (58) at (2, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (59) at (3, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (60) at (0, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (61) at (1, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (62) at (2, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (63) at (3, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (64) at (0, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (65) at (1, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (66) at (2, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (67) at (3, 4) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (68) at (0, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (69) at (1, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (70) at (2, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (71) at (3, 5) {};
\node[font=\tiny] (note_11) at (-1.5, 0.5) {Block(5)};
\node[font=\tiny] (note_12) at (-1.5, 1.5) {Const(0, 64.0)};
\node[font=\tiny] (note_13) at (-1.5, 2.5) {Const(1, 1.0)};
\node[font=\tiny] (note_14) at (-1.5, 3.5) {CallIndirect([1], [1], [2])};
\node[font=\tiny] (note_15) at (-1.5, 4.5) {Return([2])};
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (5, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (6, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (8) at (7, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (9) at (8, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (32) at (5, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (33) at (6, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (34) at (7, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (35) at (8, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (36) at (5, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (37) at (6, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (38) at (7, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (39) at (8, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (40) at (5, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (41) at (6, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (42) at (7, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (43) at (8, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (44) at (5, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (45) at (6, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (46) at (7, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (47) at (8, 4) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (48) at (5, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (49) at (6, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (50) at (7, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (51) at (8, 5) {};
\node[font=\tiny] (note_6) at (3.5, 0.5) {Block(4)};
\node[font=\tiny] (note_7) at (3.5, 1.5) {Const(0, 32.0)};
\node[font=\tiny] (note_8) at (3.5, 2.5) {Const(1, 0.0)};
\node[font=\tiny] (note_9) at (3.5, 3.5) {CallIndirect([0], [1], [2])};
\node[font=\tiny] (note_10) at (3.5, 4.5) {Return([2])};
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (10, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (4) at (11, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (5) at (12, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (23) at (10, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (24) at (11, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (25) at (12, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (26) at (10, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (27) at (11, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (28) at (12, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (29) at (10, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (30) at (11, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (31) at (12, 3) {};
\node[font=\tiny] (note_3) at (8.5, 0.5) {Block(1)};
\node[font=\tiny] (note_4) at (8.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] (note_5) at (8.5, 2.5) {Return([1])};
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (14, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (15, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (2) at (16, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (14, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (15) at (15, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (16) at (16, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (17) at (14, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (18) at (15, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (19) at (16, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (14, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (21) at (15, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (22) at (16, 3) {};
\node[font=\tiny] (note_0) at (12.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (12.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] (note_2) at (12.5, 2.5) {Return([1])};
		\path[->] (0) edge (14);
		\path[->] (1) edge (15);
		\path[->] (2) edge (16);
		\path[->] (15) edge (19);
		\path[->] (14) edge (17);
		\path[->] (15) edge (18);
		\path[->] (17) edge (20);
		\path[->] (18) edge (21);
		\path[->] (19) edge (22);
		\path[->] (3) edge (23);
		\path[->] (4) edge (24);
		\path[->] (5) edge (25);
		\path[->] (24) edge (28);
		\path[->] (23) edge (26);
		\path[->] (24) edge (27);
		\path[->] (26) edge (29);
		\path[->] (27) edge (30);
		\path[->] (28) edge (31);
		\path[->] (6) edge (32);
		\path[->] (7) edge (33);
		\path[->] (8) edge (34);
		\path[->] (9) edge (35);
		\path[->] (32) edge (37);
		\path[->] (32) edge (36);
		\path[->] (34) edge (38);
		\path[->] (35) edge (39);
		\path[->] (36) edge (42);
		\path[->] (36) edge (40);
		\path[->] (37) edge (41);
		\path[->] (39) edge (43);
		\path[->] (40) edge node { } (44);
		\path[->] (41) edge node { } (45);
		\path[->] (42) edge node { } (46);
		\path[->] (44) edge (48);
		\path[->] (45) edge (49);
		\path[->] (46) edge (50);
		\path[->] (47) edge (51);
		\path[->] (10) edge (52);
		\path[->] (11) edge (53);
		\path[->] (12) edge (54);
		\path[->] (13) edge (55);
		\path[->] (52) edge (57);
		\path[->] (52) edge (56);
		\path[->] (54) edge (58);
		\path[->] (55) edge (59);
		\path[->] (56) edge (62);
		\path[->] (56) edge (60);
		\path[->] (57) edge (61);
		\path[->] (59) edge (63);
		\path[->] (60) edge node { } (64);
		\path[->] (61) edge node { } (65);
		\path[->] (62) edge node { } (66);
		\path[->] (64) edge (68);
		\path[->] (65) edge (69);
		\path[->] (66) edge (70);
		\path[->] (67) edge (71);
		\path[->, red] (20) [bend right] edge  node { } (44);
		\path[->, red] (22) [bend right] edge  node { } (47);
		\path[->, red] (29) [bend right] edge  node { } (64);
		\path[->, red] (31) [bend right] edge  node { } (67);
		\path[->, green] (40) [bend left] edge node { } (0);
		\path[->, green] (42) [bend left] edge node { } (1);
		\path[->, green] (60) [bend left] edge node { } (3);
		\path[->, green] (62) [bend left] edge node { } (4);


                \end{tikzpicture}
            \end{document}
