ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_killing_dot.snap
---
source: ide/src/tests/icfg/convert.rs
expression: output

---
   \documentclass{article}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (2) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (3) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (5) at (1, 2) {};
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 2.0)};
		\path[->] (0) edge (3);
		\path[->] (2) edge (5);


                \end{tikzpicture}
            \end{document}
