ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_killing_op.snap
---
source: ide/src/tests/icfg/convert.rs
expression: "format!(\"{:#?}\", res)"

---
SubGraph {
    vars: [
        Variable {
            id: "taut",
            last_fact: [
                Fact {
                    id: 12,
                    note: "<b>taut</b> at 4<br/>Const(\"%2\", 1.0)",
                },
            ],
            killed: false,
        },
        Variable {
            id: "%0",
            last_fact: [
                Fact {
                    id: 13,
                    note: "<b>%0</b> at 4<br/>Const(\"%2\", 1.0)",
                },
            ],
            killed: true,
        },
        Variable {
            id: "%1",
            last_fact: [
                Fact {
                    id: 14,
                    note: "<b>%1</b> at 4<br/>Const(\"%2\", 1.0)",
                },
            ],
            killed: true,
        },
        Variable {
            id: "%2",
            last_fact: [
                Fact {
                    id: 15,
                    note: "<b>%2</b> at 4<br/>Const(\"%2\", 1.0)",
                },
            ],
            killed: false,
        },
    ],
    facts: [
        Fact {
            id: 0,
            note: "taut",
        },
        Fact {
            id: 1,
            note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
        },
        Fact {
            id: 2,
            note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
        },
        Fact {
            id: 3,
            note: "<b>taut</b> at 1<br/>Const(\"%1\", 1.0)",
        },
        Fact {
            id: 4,
            note: "<b>%0</b> at 1<br/>Const(\"%1\", 1.0)",
        },
        Fact {
            id: 5,
            note: "<b>%1</b> at 1<br/>Const(\"%1\", 1.0)",
        },
        Fact {
            id: 6,
            note: "<b>taut</b> at 2<br/>Kill(\"%0\")",
        },
        Fact {
            id: 7,
            note: "<b>%0</b> at 2<br/>Kill(\"%0\")",
        },
        Fact {
            id: 8,
            note: "<b>%1</b> at 2<br/>Kill(\"%0\")",
        },
        Fact {
            id: 9,
            note: "<b>taut</b> at 3<br/>Kill(\"%1\")",
        },
        Fact {
            id: 10,
            note: "<b>%0</b> at 3<br/>Kill(\"%1\")",
        },
        Fact {
            id: 11,
            note: "<b>%1</b> at 3<br/>Kill(\"%1\")",
        },
        Fact {
            id: 12,
            note: "<b>taut</b> at 4<br/>Const(\"%2\", 1.0)",
        },
        Fact {
            id: 13,
            note: "<b>%0</b> at 4<br/>Const(\"%2\", 1.0)",
        },
        Fact {
            id: 14,
            note: "<b>%1</b> at 4<br/>Const(\"%2\", 1.0)",
        },
        Fact {
            id: 15,
            note: "<b>%2</b> at 4<br/>Const(\"%2\", 1.0)",
        },
    ],
    edges: [
        Normal {
            from: Fact {
                id: 0,
                note: "taut",
            },
            to: Fact {
                id: 1,
                note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 0,
                note: "taut",
            },
            to: Fact {
                id: 2,
                note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 1,
                note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
            },
            to: Fact {
                id: 3,
                note: "<b>taut</b> at 1<br/>Const(\"%1\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 2,
                note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
            },
            to: Fact {
                id: 4,
                note: "<b>%0</b> at 1<br/>Const(\"%1\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 1,
                note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
            },
            to: Fact {
                id: 5,
                note: "<b>%1</b> at 1<br/>Const(\"%1\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 3,
                note: "<b>taut</b> at 1<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 6,
                note: "<b>taut</b> at 2<br/>Kill(\"%0\")",
            },
        },
        Normal {
            from: Fact {
                id: 5,
                note: "<b>%1</b> at 1<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 8,
                note: "<b>%1</b> at 2<br/>Kill(\"%0\")",
            },
        },
        Normal {
            from: Fact {
                id: 6,
                note: "<b>taut</b> at 2<br/>Kill(\"%0\")",
            },
            to: Fact {
                id: 9,
                note: "<b>taut</b> at 3<br/>Kill(\"%1\")",
            },
        },
        Normal {
            from: Fact {
                id: 9,
                note: "<b>taut</b> at 3<br/>Kill(\"%1\")",
            },
            to: Fact {
                id: 12,
                note: "<b>taut</b> at 4<br/>Const(\"%2\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 9,
                note: "<b>taut</b> at 3<br/>Kill(\"%1\")",
            },
            to: Fact {
                id: 15,
                note: "<b>%2</b> at 4<br/>Const(\"%2\", 1.0)",
            },
        },
    ],
    counter: Counter {
        counter: 16,
    },
    epoch: Counter {
        counter: 5,
    },
}
