ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_killing_op_dot.snap
---
source: ide/src/tests/icfg/convert.rs
expression: output

---
   \documentclass{article}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (2) at (2, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (3) at (3, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (5) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (6) at (2, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (7) at (3, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (9) at (1, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (10) at (2, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (11) at (3, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (1, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (14) at (2, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (15) at (3, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (0, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (17) at (1, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (18) at (2, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (19) at (3, 4) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (0, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (21) at (1, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (22) at (2, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (23) at (3, 5) {};
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Kill(0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Kill(1)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Const(2, 1.0)};
		\path[->] (0) edge (5);
		\path[->] (0) edge (4);
		\path[->] (2) edge (6);
		\path[->] (3) edge (7);
		\path[->] (4) edge (10);
		\path[->] (4) edge (8);
		\path[->] (5) edge (9);
		\path[->] (7) edge (11);
		\path[->] (8) edge (12);
		\path[->] (10) edge (14);
		\path[->] (11) edge (15);
		\path[->] (12) edge (16);
		\path[->] (13) edge (17);
		\path[->] (15) edge (19);
		\path[->] (16) edge (23);
		\path[->] (16) edge (20);
		\path[->] (17) edge (21);
		\path[->] (18) edge (22);


                \end{tikzpicture}
            \end{document}
