ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_mismatched_functions2_dot.snap
---
source: ide/src/tests/icfg/convert.rs
expression: output

---
   \documentclass{article}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (6) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (8) at (1, 2) {};
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [])};
\node[circle,fill,inner sep=1pt,label=left:taut] (2) at (3, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (3) at (4, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (4) at (5, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (3, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (10) at (4, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (11) at (5, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (3, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (4, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (14) at (5, 2) {};
\node[font=\tiny] (note_2) at (1.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_3) at (1.5, 1.5) {Const(1, 3.0)};
		\path[->] (0) edge (6);
		\path[->] (2) edge (10);
		\path[->] (9) edge (14);


                \end{tikzpicture}
            \end{document}
