ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_multiple return_values_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{article}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (2) at (2, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (3) at (3, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (8) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (9) at (2, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (10) at (3, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (11) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (12) at (1, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (13) at (2, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (14) at (3, 2) {};
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1, 2])};
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (5, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (5) at (6, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (6) at (7, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (5, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (16) at (6, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (17) at (7, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (5, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (19) at (6, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (20) at (7, 2) {};
\node[font=\tiny] (note_2) at (3.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_3) at (3.5, 1.5) {Const(1, 3.0)};
		\path[->] (0) edge (8);
		\path[->] (0) edge (7);
		\path[->] (2) edge (9);
		\path[->] (3) edge (10);
		\path[->] (7) edge node { } (11);
		\path[->] (8) edge node { } (12);
		\path[->] (4) edge (16);
		\path[->] (4) edge (15);
		\path[->] (6) edge (17);
		\path[->] (15) edge (20);
		\path[->] (15) edge (18);
		\path[->] (16) edge (19);
		\path[->, green] (7) [bend left] edge node { } (4);
		\path[->, green] (8) [bend left] edge node { } (5);
		\path[->, red] (18) [bend right] edge  node { } (11);
		\path[->, red] (19) [bend right] edge  node { } (13);
		\path[->, red] (20) [bend right] edge  node { } (14);


                \end{tikzpicture}
            \end{document}
